Hides position table which is unfinished.

--- a/ProductStore/Content/views/main.html
+++ b/ProductStore/Content/views/main.html
@@ -1,8 +1,9 @@
 <div class="row marketing">
-<h4>{{ username != null? 'Hola, ' + username : 'No se encontro su usuario.'}}</h4>
+<h4>{{ username != null? 'Hola, ' + username : 'No se encontro tu usuario.'}}</h4>
 </div>
 <h1>Posiciones</h1>
-<table class="table">
+Proximamente...
+<table class="table" style="display: none">
       <thead>
         <tr>
           <th>#</th>
