--- a/ProductStore/Content/views/eliminatorias.html
+++ b/ProductStore/Content/views/eliminatorias.html
@@ -13,7 +13,7 @@
     <tbody>
         <tr>
             <td class="bracket-team-cell brackets-bottom-line">
-                A1: {{matches.A1.Prediccion}} 
+                 {{matches.A1.Prediccion}} 
                  <span ng-show="matches.A1.PuntosGanados > 0" class="label label-success">+{{matches.A1.PuntosGanados}}</span>
                  <span ng-show="matches.A1.PuntosGanados == 0" class="label label-danger">{{matches.A1.PuntosGanados}}</span>
             </td>
@@ -25,14 +25,14 @@
             <td class="text-align-right bracket-team-cell brackets-bottom-line">
                 <span ng-show="matches.B1.PuntosGanados > 0" class="label label-success">+{{matches.B1.PuntosGanados}}</span>
                 <span ng-show="matches.B1.PuntosGanados == 0" class="label label-danger">{{matches.B1.PuntosGanados}}</span> 
-                 B1: {{matches.B1.Prediccion}}
+                 {{matches.B1.Prediccion}}
 
             </td>
         </tr>
          <tr>
             <td class="brackets-right-line"></td>
             <td class="bracket-team-cell  brackets-bottom-line">
-                A1B2: {{matches.A1B2.Prediccion}} 
+                {{matches.A1B2.Prediccion}} 
                  <span ng-show="matches.A1B2.PuntosGanados > 0" class="label label-success">+{{matches.A1B2.PuntosGanados}}</span>
                  <span ng-show="matches.A1B2.PuntosGanados == 0" class="label label-danger">{{matches.A1B2.PuntosGanados}}</span>
             </td>
@@ -42,13 +42,13 @@
             <td class="text-align-right brackets-right-line bracket-team-cell brackets-bottom-line">
                 <span ng-show="matches.B1A2.PuntosGanados > 0" class="label label-success">+{{matches.B1A2.PuntosGanados}}</span>
                 <span ng-show="matches.B1A2.PuntosGanados == 0" class="label label-danger">{{matches.B1A2.PuntosGanados}}</span> 
-                 B1A2: {{matches.B1A2.Prediccion}}
+                 {{matches.B1A2.Prediccion}}
             </td>
             <td class="text-align-right"></td>
         </tr>
         <tr>
             <td class="bracket-team-cell brackets-right-line brackets-bottom-line">
-                B2: {{matches.B2.Prediccion}} 
+                {{matches.B2.Prediccion}} 
                  <span ng-show="matches.B2.PuntosGanados > 0" class="label label-success">+{{matches.B2.PuntosGanados}}</span>
                  <span ng-show="matches.B2.PuntosGanados == 0" class="label label-danger">{{matches.B2.PuntosGanados}}</span>
             </td>
@@ -60,14 +60,14 @@
             <td class="text-align-right bracket-team-cell brackets-bottom-line">
                 <span ng-show="matches.A2.PuntosGanados > 0" class="label label-success">+{{matches.A2.PuntosGanados}}</span>
                 <span ng-show="matches.A2.PuntosGanados == 0" class="label label-danger">{{matches.A2.PuntosGanados}}</span>
-                 A2: {{matches.A2.Prediccion}}
+                 {{matches.A2.Prediccion}}
             </td>
         </tr>
        <tr>
             <td></td>
             <td class="brackets-right-line"></td>
             <td class="bracket-team-cell brackets-bottom-line">
-                A1B2C1D2: {{matches.A1B2C1D2.Prediccion}} 
+                {{matches.A1B2C1D2.Prediccion}} 
                  <span ng-show="matches.A1B2C1D2.PuntosGanados > 0" class="label label-success">+{{matches.A1B2C1D2.PuntosGanados}}</span>
                 <span ng-show="matches.A1B2C1D2.PuntosGanados == 0" class="label label-danger">{{matches.A1B2C1D2.PuntosGanados}}</span>
             </td>
@@ -75,14 +75,14 @@
             <td class="text-align-right brackets-right-line bracket-team-cell brackets-bottom-line">
                 <span ng-show="matches.B1A2D1C2.PuntosGanados > 0" class="label label-success">+{{matches.B1A2D1C2.PuntosGanados}}</span>
                 <span ng-show="matches.B1A2D1C2.PuntosGanados == 0" class="label label-danger">{{matches.B1A2D1C2.PuntosGanados}}</span> 
-                 B1A2D1C2: {{matches.B1A2D1C2.Prediccion}}
+                {{matches.B1A2D1C2.Prediccion}}
             </td>
             <td class="text-align-right"></td>
             <td class="text-align-right"></td>
         </tr>
        
         <tr>
-            <td class="bracket-team-cell brackets-bottom-line">C1: {{matches.C1.Prediccion}} 
+            <td class="bracket-team-cell brackets-bottom-line">{{matches.C1.Prediccion}} 
                   <span ng-show="matches.C1.PuntosGanados > 0" class="label label-success">+{{matches.C1.PuntosGanados}}</span>
                 <span ng-show="matches.C1.PuntosGanados == 0" class="label label-danger">{{matches.C1.PuntosGanados}}</span>
             </td>
@@ -94,14 +94,14 @@
             <td class="text-align-right bracket-team-cell brackets-bottom-line">
                 <span ng-show="matches.D1.PuntosGanados > 0" class="label label-success">+{{matches.D1.PuntosGanados}}</span>
                 <span ng-show="matches.D1.PuntosGanados == 0" class="label label-danger">{{matches.D1.PuntosGanados}}</span> 
-                 D1: {{matches.D1.Prediccion}}
+                 {{matches.D1.Prediccion}}
 
             </td>
         </tr>
          <tr>
             <td class="brackets-right-line"></td>
             <td class="brackets-right-line bracket-team-cell brackets-bottom-line">
-                C1D2: {{matches.C1D2.Prediccion}} 
+                {{matches.C1D2.Prediccion}} 
                  <span ng-show="matches.C1D2.PuntosGanados > 0" class="label label-success">+{{matches.C1D2.PuntosGanados}}</span>
                 <span ng-show="matches.C1D2.PuntosGanados == 0" class="label label-danger">{{matches.C1D2.PuntosGanados}}</span>
             </td>
@@ -111,12 +111,12 @@
             <td class="text-align-right brackets-right-line bracket-team-cell brackets-bottom-line">
                 <span ng-show="matches.D1C2.PuntosGanados > 0" class="label label-success">+{{matches.D1C2.PuntosGanados}}</span>
                 <span ng-show="matches.D1C2.PuntosGanados == 0" class="label label-danger">{{matches.D1C2.PuntosGanados}}</span> 
-                 D1C2: {{matches.D1C2.Prediccion}}</td>
+                 {{matches.D1C2.Prediccion}}</td>
             <td class="text-align-right"></td>
         </tr>
         <tr>
             <td class="bracket-team-cell brackets-right-line brackets-bottom-line">
-                D2: {{matches.D2.Prediccion}} 
+                {{matches.D2.Prediccion}} 
                  <span ng-show="matches.D2.PuntosGanados > 0" class="label label-success">+{{matches.D2.PuntosGanados}}</span>
                 <span ng-show="matches.D2.PuntosGanados == 0" class="label label-danger">{{matches.D2.PuntosGanados}}</span> 
             </td>
@@ -128,7 +128,7 @@
             <td class="text-align-right bracket-team-cell brackets-bottom-line">
                 <span ng-show="matches.C2.PuntosGanados > 0" class="label label-success">+{{matches.C2.PuntosGanados}}</span>
                 <span ng-show="matches.C2.PuntosGanados == 0" class="label label-danger">{{matches.C2.PuntosGanados}}</span> 
-                 C2: {{matches.C2.Prediccion}}
+                 {{matches.C2.Prediccion}}
             </td>
         </tr>
          <tr>
@@ -137,7 +137,7 @@
             <td></td>
             <td class="brackets-right-line"></td>
             <td class="brackets-right-line bracket-team-cell brackets-bottom-line">
-                A1B2C1D2E1F2G1H2: {{matches.A1B2C1D2E1F2G1H2.Prediccion}} 
+                {{matches.A1B2C1D2E1F2G1H2.Prediccion}} 
                 <span ng-show="matches.A1B2C1D2E1F2G1H2.PuntosGanados > 0" class="label label-success">+{{matches.A1B2C1D2E1F2G1H2.PuntosGanados}}</span>
                 <span ng-show="matches.A1B2C1D2E1F2G1H2.PuntosGanados == 0" class="label label-danger">{{matches.A1B2C1D2E1F2G1H2.PuntosGanados}}</span> 
             </td>
@@ -156,7 +156,7 @@
             <td class="text-align-right brackets-right-line bracket-team-cell brackets-bottom-line">
                 <span ng-show="matches.B1A2D1C2F1E2H1G2.PuntosGanados > 0" class="label label-success">+{{matches.B1A2D1C2F1E2H1G2.PuntosGanados}}</span>
                 <span ng-show="matches.B1A2D1C2F1E2H1G2.PuntosGanados == 0" class="label label-danger">{{matches.B1A2D1C2F1E2H1G2.PuntosGanados}}</span> 
-                 B1A2D1C2F1E2H1G2: {{matches.B1A2D1C2F1E2H1G2.Prediccion}} 
+                 {{matches.B1A2D1C2F1E2H1G2.Prediccion}} 
             </td>
              <td class="text-align-right"></td>
             <td class="text-align-right"></td>
@@ -167,7 +167,7 @@
 
          <tr>
             <td class="bracket-team-cell brackets-bottom-line">
-                E1: {{matches.E1.Prediccion}} 
+                {{matches.E1.Prediccion}} 
                  <span ng-show="matches.E1.PuntosGanados > 0" class="label label-success">+{{matches.E1.PuntosGanados}}</span>
                 <span ng-show="matches.E1.PuntosGanados == 0" class="label label-danger">{{matches.E1.PuntosGanados}}</span> 
             </td>
@@ -179,13 +179,13 @@
             <td class="text-align-right bracket-team-cell brackets-bottom-line">
                 <span ng-show="matches.F1.PuntosGanados > 0" class="label label-success">+{{matches.F1.PuntosGanados}}</span>
                 <span ng-show="matches.F1.PuntosGanados == 0" class="label label-danger">{{matches.F1.PuntosGanados}}</span>
-                 F1: {{matches.F1.Prediccion}}
+                 {{matches.F1.Prediccion}}
             </td>
         </tr>
          <tr>
             <td class="brackets-right-line"></td>
             <td class="bracket-team-cell brackets-bottom-line">
-                E1F2: {{matches.E1F2.Prediccion}} 
+                {{matches.E1F2.Prediccion}} 
                  <span ng-show="matches.E1F2.PuntosGanados > 0" class="label label-success">+{{matches.E1F2.PuntosGanados}}</span>
                 <span ng-show="matches.E1F2.PuntosGanados == 0" class="label label-danger">{{matches.E1F2.PuntosGanados}}</span>
             </td>
@@ -195,13 +195,13 @@
             <td class="text-align-right brackets-right-line bracket-team-cell brackets-bottom-line">
                 <span ng-show="matches.F1E2.PuntosGanados > 0" class="label label-success">+{{matches.F1E2.PuntosGanados}}</span>
                 <span ng-show="matches.F1E2.PuntosGanados == 0" class="label label-danger">{{matches.F1E2.PuntosGanados}}</span> 
-                 F1E2: {{matches.F1E2.Prediccion}}
+                 {{matches.F1E2.Prediccion}}
             </td>
             <td class="text-align-right"></td>
         </tr>
         <tr>
             <td class="bracket-team-cell brackets-right-line brackets-bottom-line">
-                F2: {{matches.F2.Prediccion}} 
+                {{matches.F2.Prediccion}} 
                 <span ng-show="matches.F2.PuntosGanados > 0" class="label label-success">+{{matches.F2.PuntosGanados}}</span>
                 <span ng-show="matches.F2.PuntosGanados == 0" class="label label-danger">{{matches.F2.PuntosGanados}}</span>
             </td>
@@ -213,13 +213,13 @@
             <td class="text-align-right bracket-team-cell brackets-bottom-line">
                 <span ng-show="matches.E2.PuntosGanados > 0" class="label label-success">+{{matches.E2.PuntosGanados}}</span>
                 <span ng-show="matches.E2.PuntosGanados == 0" class="label label-danger">{{matches.E2.PuntosGanados}}</span> 
-                 E2: {{matches.E2.Prediccion}}</td>
+                 {{matches.E2.Prediccion}}</td>
         </tr>
        <tr>
             <td></td>
             <td class="brackets-right-line brackets-right-line"></td>
             <td class="brackets-right-line bracket-team-cell brackets-bottom-line">
-                E1F2G1H2: {{matches.E1F2G1H2.Prediccion}} 
+                {{matches.E1F2G1H2.Prediccion}} 
                  <span ng-show="matches.E1F2G1H2.PuntosGanados > 0" class="label label-success">+{{matches.E1F2G1H2.PuntosGanados}}</span>
                 <span ng-show="matches.E1F2G1H2.PuntosGanados == 0" class="label label-danger">{{matches.E1F2G1H2.PuntosGanados}}</span>
                 </td>
@@ -227,7 +227,7 @@
             <td class="text-align-right brackets-right-line bracket-team-cell brackets-bottom-line">
                 <span ng-show="matches.F1E2H1G2.PuntosGanados > 0" class="label label-success">+{{matches.F1E2H1G2.PuntosGanados}}</span>
                 <span ng-show="matches.F1E2H1G2.PuntosGanados == 0" class="label label-danger">{{matches.F1E2H1G2.PuntosGanados}}</span> 
-                F1E2H1G2: {{matches.F1E2H1G2.Prediccion}}
+                {{matches.F1E2H1G2.Prediccion}}
             </td>
             <td class="text-align-right"></td>
             <td class="text-align-right"></td>
@@ -235,7 +235,7 @@
        
         <tr>
             <td class="bracket-team-cell brackets-bottom-line">
-                G1: {{matches.G1.Prediccion}} 
+                {{matches.G1.Prediccion}} 
                  <span ng-show="matches.G1.PuntosGanados > 0" class="label label-success">+{{matches.G1.PuntosGanados}}</span>
                 <span ng-show="matches.G1.PuntosGanados == 0" class="label label-danger">{{matches.G1.PuntosGanados}}</span>
             </td>
@@ -247,14 +247,14 @@
             <td class="text-align-right bracket-team-cell brackets-bottom-line">
                 <span ng-show="matches.H1.PuntosGanados > 0" class="label label-success">+{{matches.H1.PuntosGanados}}</span>
                 <span ng-show="matches.H1.PuntosGanados == 0" class="label label-danger">{{matches.H1.PuntosGanados}}</span>  
-                H1: {{matches.H1.Prediccion}}
+                {{matches.H1.Prediccion}}
 
             </td>
         </tr>
          <tr>
             <td class="brackets-right-line"></td>
             <td class="brackets-right-line bracket-team-cell brackets-bottom-line">
-                G1H2: {{matches.G1H2.Prediccion}} 
+                {{matches.G1H2.Prediccion}} 
                  <span ng-show="matches.G1H2.PuntosGanados > 0" class="label label-success">+{{matches.G1H2.PuntosGanados}}</span>
                 <span ng-show="matches.G1H2.PuntosGanados == 0" class="label label-danger">{{matches.G1H2.PuntosGanados}}</span>
             </td>
@@ -264,13 +264,13 @@
             <td class="text-align-right brackets-right-line bracket-team-cell brackets-bottom-line">
                 <span ng-show="matches.H1G2.PuntosGanados > 0" class="label label-success">+{{matches.H1G2.PuntosGanados}}</span>
                 <span ng-show="matches.H1G2.PuntosGanados == 0" class="label label-danger">{{matches.H1G2.PuntosGanados}}</span>
-                 H1G2: {{matches.H1G2.Prediccion}}
+                 {{matches.H1G2.Prediccion}}
             </td>
             <td class="text-align-right"></td>
         </tr>
         <tr>
             <td class="bracket-team-cell brackets-right-line brackets-bottom-line">
-                H2: {{matches.H2.Prediccion}} 
+                {{matches.H2.Prediccion}} 
                 <span ng-show="matches.H2.PuntosGanados > 0" class="label label-success">+{{matches.H2.PuntosGanados}}</span>
                 <span ng-show="matches.H2.PuntosGanados == 0" class="label label-danger">{{matches.H2.PuntosGanados}}</span>
             </td>
@@ -282,7 +282,7 @@
             <td class="text-align-right bracket-team-cell brackets-bottom-line">
                 <span ng-show="matches.G2.PuntosGanados > 0" class="label label-success">+{{matches.G2.PuntosGanados}}</span>
                 <span ng-show="matches.G2.PuntosGanados == 0" class="label label-danger">{{matches.G2.PuntosGanados}}</span> 
-                 G2: {{matches.G1.Prediccion}}</td>
+                 {{matches.G1.Prediccion}}</td>
         </tr>
         <tr>
             <td></td>
