--- a/ProductStore/Content/views/login.html
+++ b/ProductStore/Content/views/login.html
@@ -1,32 +1,13 @@
-﻿<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: block;">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title form-signin-heading" id="myModalLabel">Prode 2014</h4>
-      </div>
-      <div class="modal-body">
-        <form class="form-horizontal" role="form" name="loginForm" ng-submit="login(credentials)" novalidate>
+﻿<form class="form-horizontal" role="form" name="loginForm" ng-submit="login(token)" novalidate>
   <div class="form-group">
-    <label for="userame" class="col-sm-2 control-label">Email</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="usernameInput" placeholder="username" ng-model="credentials.username" required="" autofocus="">
+    <label for="codigoInput" class="col-sm-2 control-label">Codigo</label>
+    <div class="col-sm-4">
+      <input type="text" class="form-control" id="codigoInput" placeholder="Enter your code"  ng-model="token" required="" autofocus="">
     </div>
   </div>
   <div class="form-group">
-    <label for="inputPassword" class="col-sm-2 control-label">Contraseña</label>
-    <div class="col-sm-10">
-      <input type="password" class="form-control" id="inputPassword" placeholder="Password" ng-model="credentials.password" required="">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn  btn-lg btn-primary" >Log In</button>
     </div>
   </div>
-      </form>
-      </div>
-      <div class="modal-footer">
-          <button type="submit">Login</button>
-        <button type="button" ng-click="login()" class="btn btn-lg btn-primary btn-block">Log In</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="modal-backdrop fade in"></div>
+</form>
