--- a/ProductStore/Content/views/main.html
+++ b/ProductStore/Content/views/main.html
@@ -2,34 +2,12 @@
 <h4>{{ username != null? 'Hola, ' + username : 'No se encontro tu usuario.'}}</h4>
 </div>
 <h1>Posiciones</h1>
-Proximamente...
-<table class="table" style="display: none">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>First Name</th>
-          <th>Last Name</th>
-          <th>Username</th>
-        </tr>
-      </thead>
+<table class="table">
       <tbody>
-        <tr>
-          <td>1</td>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>Larry</td>
-          <td>the Bird</td>
-          <td>@twitter</td>
+        <tr ng-repeat="p in posiciones" style="{{ 'font-size:' + ($index == 0 ? '30px' : ($index == 1 ? '25px':($index == 2 ? '20px':'14px'))) }};">
+            <td>{{$index + 1}}</td>
+          <td>{{p.User}}</td>
+          <td>{{p.Points}}</td>
         </tr>
       </tbody>
     </table>
