--- a/ProductStore/Views/Home/Login.cshtml
+++ b/ProductStore/Views/Home/Login.cshtml
@@ -7,21 +7,15 @@
       <div class="modal-body">
         <form class="form-horizontal ng-pristine ng-invalid ng-invalid-required" role="form">
   <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+    <label for="codigoInput" class="col-sm-2 control-label">Codigo</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control ng-pristine ng-invalid ng-invalid-required" id="inputEmail3" placeholder="Email" ng-model="email" required="" autofocus="">
+      <input type="text" class="form-control ng-pristine ng-invalid ng-invalid-required" id="codigoInput" placeholder="Codigo" ng-model="token" required="" autofocus="">
     </div>
   </div>
-  <div class="form-group">
-    <label for="inputPassword3" class="col-sm-2 control-label">Contraseña</label>
-    <div class="col-sm-10">
-      <input type="password" class="form-control ng-pristine ng-invalid ng-invalid-required" id="inputPassword3" placeholder="Password" ng-model="password" required="">
-    </div>
-  </div>
-      </form>
+  </form>
       </div>
       <div class="modal-footer">
-        <button type="button" ng-click="login()" class="btn btn-lg btn-primary btn-block">Log In</button>
+        <button type="button" ng-click="login(token)" class="btn btn-lg btn-primary btn-block">Log In</button>
       </div>
     </div>
   </div>
