stores session data in  instead of . Uses .url(), instead of .path() which does not remove query string params.

--- a/ProductStore/Views/Home/Index.cshtml
+++ b/ProductStore/Views/Home/Index.cshtml
@@ -7,6 +7,7 @@
         <li ng-class="{ active: isActive('/eliminatorias')}"><a ng-href="#/eliminatorias">Eliminatorias</a></li>
         <li ng-class="{ active: isActive('/mejores')}"><a ng-href="#/mejores">Mejores</a></li>
         <li ng-class="{ active: isActive('/')}"><a ng-href="#/">Posiciones</a></li>
+        <li><a ng-click="logout()">LogOut</a></li>
       </ul>
       <img style="height: 75px" src="/images/brasil_2014.jpg">
     </div>
