--- a/ProductStore/Content/views/grupos.html
+++ b/ProductStore/Content/views/grupos.html
@@ -1,6 +1,16 @@
 <div ng-hide="true" class="alert alert-warning">
     Algunos Partidos fueron jugados pero todavia no se cargaron sus resutlados.
 </div>
+<!-- Single button -->
+    <div class="btn-group" dropdown is-open="status.isopen">
+      <button type="button" class="btn btn-default dropdown-toggle" ng-disabled="disabled">
+        {{displayingUser}} <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu" role="menu">
+        <li ng-repeat="u in users"><a href="#/grupos?view={{u.Id}}">{{u.Username}}</a></li>
+      </ul>
+    </div>
+
 <div ng-repeat="p in predictions">
 <h3 class="sub-header">Grupo {{p.Letter}} <small></small></h3>
 <table class="table">
