--- a/ProductStore/Content/views/mejores.html
+++ b/ProductStore/Content/views/mejores.html
@@ -1,4 +1,4 @@
-﻿<h1 style="margin-bottom: 15px;text-align: center;">Mejores</h1>
+﻿<h1 style="margin-bottom: 15px;text-align: center;">Mejores <small>Proximamente (Si vuelvo a estar al pedo)</small></h1>
 <table class="table table-striped" style="width: 90%;margin: auto;margin-bottom: 25px;">
 	<thead>
         <tr>
