--- a/ProductStore/Views/Shared/_Layout.cshtml
+++ b/ProductStore/Views/Shared/_Layout.cshtml
@@ -37,8 +37,9 @@
              m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
          })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-         ga('create', 'UA-XXXXX-X');
+         ga('create', 'UA-52145509-1', 'apphb.com');
          ga('send', 'pageview');
+
     </script>
 
      <!--[if lt IE 9]>
@@ -55,6 +56,7 @@
     <script src="/scripts/angular-cookies/angular-cookies.js"></script>
     <script src="/scripts/angular-sanitize/angular-sanitize.js"></script>
     <script src="/scripts/angular-route/angular-route.js"></script>
+    <script src="/scripts/ui-bootstrap-tpls-0.11.0.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
