--- a/ProductStore/Content/views/eliminatorias.html
+++ b/ProductStore/Content/views/eliminatorias.html
@@ -12,7 +12,7 @@
       </ul>
     </div>
 
-<button type="button" class="btn btn-primary" ng-model="showEditOption" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">Agregar Resltados</button>
+<button type="button" class="btn btn-primary" ng-model="showEditOption" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">Agregar Resultados</button>
 
 <table style="margin: auto;">
     <thead>
