Hide edit option buttons.

--- a/ProductStore/Content/views/eliminatorias.html
+++ b/ProductStore/Content/views/eliminatorias.html
@@ -12,7 +12,7 @@
       </ul>
     </div>
 
-<button type="button" class="btn btn-primary" ng-model="showEditOption" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">{{showEditOption?'Terminado':'Agregar Resultados'}} <span class="glyphicon" ng-class="{'glyphicon-pencil': !showEditOption,'glyphicon-ok': showEditOption}"></span></button>
+<button style="display:none" type="button" class="btn btn-primary" ng-model="showEditOption" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">{{showEditOption?'Terminado':'Agregar Resultados'}} <span class="glyphicon" ng-class="{'glyphicon-pencil': !showEditOption,'glyphicon-ok': showEditOption}"></span></button>
 
 <table style="margin: auto;">
     <thead>
